Gestion du profil utilisateur

--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -11,7 +11,7 @@
                 "listMonthShort":"Jan,Fév,Mar,Avr,Mai,Juin,Juil,Aout,Sep,Oct,Nov,Déc",
                 "listWeekdaysFull":"Dimanche,Lundi,Mardi,Mercredi,Jeudi,Vendredi,Samedi",
                 "listWeekdaysLetter":"D,L,M,M,J,V,S",
-                "today":"Today",
+                "today":"Aujourd'hui",
                 "clear":"Annuler",
                 "close":"Fermer"
             },
