--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -21,7 +21,7 @@
             }
         },
         "efficiently" : {
-            "efficiently": "Efficiently",
+            "efficiently": "Shoot's efficiency",
             "efficientlyTotal": "Global",
             "efficiently9m" : "9 mètres",
             "efficiently6m" : "6 mètres",
