--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -21,7 +21,7 @@
             }
         },
         "efficiently" : {
-            "efficiently": "Efficacité",
+            "efficiently": "Efficacité au tir",
             "efficientlyTotal": "Globale",
             "efficiently9m" : "9 mètres",
             "efficiently6m" : "6 mètres",
