Suppression stats en dur Fiche player stat

--- a/src/app/components/i18n/commons/fr.json
+++ b/src/app/components/i18n/commons/fr.json
@@ -15,6 +15,9 @@
                 "clear":"Annuler",
                 "close":"Fermer"
             },
+            "hours": {
+                "pattern": "99:99"
+            },
             "phone": {
                 "pattern": "99-99-99-99-99"
             }
