--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -15,6 +15,9 @@
                 "clear":"Clear",
                 "close":"Close"
             },
+            "hours": {
+                "pattern": "99:99"
+            },
             "phone": {
                 "pattern": "(999) 999-9999"
             }
