--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -40,7 +40,7 @@
             "goalLabel": "Nombre de Buts",
             "goalAvgFull": "Moyenne/match",
             "goalAvgLight": "Moyenne",
-            "frequence": "Fréquence",
+            "frequence": "Fréquence but",
             "frequence2" : "1 but toutes les",
             "minute" : "minutes",
             "usePlayer" : "Utilisation",
