Enrichissement Stat event et stat team

--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -61,6 +61,12 @@
             "yellowCard" : "Yellow card",
             "excluTempo" : "2 minutes",
             "redCard" : "Red card"
+        },
+        "teamLabels" : {
+            "listCollect" : "list event"
+        },
+        "eventLabels" : {
+            "listPlayers" : "list players"
         }
     }
 }
