--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -24,9 +24,9 @@
     },
     "effectiveLabels": {
         "effectiveCategoryAge": "Categorie d'âge",
-        "effectiveTabMembers": "Liste des joueurs",
+        "effectiveTabMembers": "Mes joueurs",
         "effectiveTabCoachs": "Coachs",
-        "effectiveTabTeams": "Liste des équipes",
+        "effectiveTabTeams": "Mes équipes",
         "effectiveTeamsHome": "Equipes de l'effectif",
         "effectiveTeamsAdversary": "Adversaires",
         "effectiveTeamEnable": "Equipe activée",
