--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -2,7 +2,7 @@
     "headerMenu": {
         "dashboard": "Home",
         "stats" : "Statistics",
-        "effective": "Effective",
+        "effective": "My efectives",
         "training": "Training",
         "championship" : "Competition",
         "calendar" : "Agenda",
