--- a/src/app/components/i18n/menu/fr.json
+++ b/src/app/components/i18n/menu/fr.json
@@ -2,7 +2,7 @@
     "headerMenu": {
         "dashboard": "Accueil",
         "stats" : "Statistiques",
-        "effective": "Effectif",
+        "effective": "Mes effectifs",
         "training": "Entraînements",
         "championship" : "Compétition",
         "calendar" : "Agenda",
