--- a/src/app/components/i18n/stats/fr.json
+++ b/src/app/components/i18n/stats/fr.json
@@ -20,12 +20,12 @@
                 "left-wingman": "Ailier Gauche"
             }
         },
-        "efficiently" : {
-            "efficiently": "Efficacité au tir",
-            "efficientlyTotal": "Globale",
-            "efficiently9m" : "9 mètres",
-            "efficiently6m" : "6 mètres",
-            "efficiently7m" : "7 mètres"
+        "efficiency" : {
+            "efficiency": "Efficacité au tir",
+            "efficiencyTotal": "Globale",
+            "efficiency9m" : "9 mètres",
+            "efficiency6m" : "6 mètres",
+            "efficiency7m" : "7 mètres"
         },
         "actionTab" : {
             "actions": "Actions",
