Redesign fiche player et RWD

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -23,6 +23,7 @@
         "toastError":"Error, effective can't be update"
     },
     "effectiveLabels": {
+        "effectiveAvatar":"Drag and drop avatar here",
         "effectiveCategoryAge": "Category Age",
         "effectiveTabMembers": "My player list",
         "effectiveTabCoachs": "Coachs",
