Fiche profil, ctrl email, lien team sur event stats

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -84,7 +84,8 @@
         "playerTelMobile": "Mobile",
         "playerTelHome": "Home",
         "playerAddress": "Address",
-        "playerMail": "E-mail"
+        "playerMail": "E-mail",
+        "emailDirty": "Email invalid"
     },
     
     "addTeam": {
