--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -84,7 +84,8 @@
         "playerTelMobile": "Mobile",
         "playerTelHome": "Maison",
         "playerAddress": "Adresse",
-        "playerMail": "Email"
+        "playerMail": "Email",
+        "emailDirty": "Format email invalide"
     },
     
     "addTeam": {
