--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -40,7 +40,8 @@
                 "password": "Mot de passe",
                 "passwordConfirm" : "Confirmation",
                 "title": "Inscrivez-vous sur <b>Qaobee</b>"
-            }
+            },
+            "emailDirty": "Email invalid"
         }
     },
     "error": {
