--- a/src/app/components/i18n/agenda/en.json
+++ b/src/app/components/i18n/agenda/en.json
@@ -32,7 +32,8 @@
     "eventLabels": {
         "Team": "Select my team",
         "Adversary": "Choice adversary",
-        "Type": "Choice Event Type",
+        "Type" : "Event type", 
+        "selectType": "Choice Event Type",
         "Label": "Label",
         "LabelPlaceHolder": "1st journey... League Cup...",
         "StartDate": "Start date",
@@ -47,5 +48,13 @@
         "SectionActorsAdversary" : "Adversary", 
         "SectionPlaning":"Planning",
         "SectionPlace":"Location"
-    }
+    },
+    "eventErrors" : {
+		"Type" : "Event type mandatory", 
+		"Label" : "Event label mandatory",  
+		"StartDate" : "Event start date mandatory", 
+		"StartHour" : "Event hour mandatory",
+        "teamHome" : "Team mandatory",
+        "adversary" : "Adversary mandatory"
+	}
 }
