Adr mail + map adr + Player view

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -71,7 +71,7 @@
         "playerGenderF": "Female" ,
         "playerBirthdate": "Birthdate" ,
         "playerBirthCity": "BirthCity" ,
-        "playerNationality": "Nationality" ,
+        "playerNationality": "Born in" ,
 
         "playerCaracterSection": "Player characteristics",
         "playerPositionType": "Position" ,
