--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -71,7 +71,7 @@
         "playerGenderF": "Femme" ,
         "playerBirthdate": "Date de naissance" ,
         "playerBirthCity": "Ville de naissance" ,
-        "playerNationality": "Nationalité" ,
+        "playerNationality": "Né(e) en" ,
 
         "playerCaracterSection": "Caractéristiques",
         "playerPositionType": "Poste" ,
