Directive filter calendar

--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -24,6 +24,11 @@
                 "pattern": "(999) 999-9999"
             }
         },
+        "periodicity" : {
+            "month": "Month",
+            "quarter": "Quarter",
+            "season": "Season"
+        }, 
         "footer": {
             "link": {
                 "about": "About",
