--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -44,7 +44,8 @@
             "gamePlayed" : "Games played",
             "holder" : "Holder",
             "playTime" : "Average playtime",
-            "sanctions" : "Advertissements"
+            "sanctions" : "Advertissements",
+            "noData" : "No Data collected on period"
         },
         "labelTab" : {
 			"shoot" : "Shoot", 
