Gestion pas de stats + Widget Actions Positives et négatives

--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -23,6 +23,7 @@
             "efficiency7m" : "7 mètres"
         },
         "actionTab" : {
+            "title" : "Facts in game",
             "actions": "Actions",
             "positive": "positives",
             "negative": "negative",
